fix: Use wrangler deploy directly for non-interactive Cloudflare deploy button flow
The deploy.sh script uses interactive 'read' commands for secrets,
which fails in Cloudflare Pages non-interactive build environment.
Changed 'deploy' script to run 'wrangler deploy' directly.
Interactive script available via 'deploy:interactive'.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "./scripts/deploy.sh production",
-    "deploy:staging": "./scripts/deploy.sh staging",
+    "deploy": "wrangler deploy --env production",
+    "deploy:staging": "wrangler deploy --env staging",
+    "deploy:interactive": "./scripts/deploy.sh production",
     "deploy:manual": "wrangler deploy",
     "tail": "wrangler tail",
     "tail:production": "wrangler tail --env production",
